# Calculator

.github/workflows/: ci.yml
latex/: refman.tex
rpn_calculator/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake  rpn_tests
rpn_calculator/Testing/Temporary/: CTestCostData.txt
rpn_calculator/html/: md_README.html  pages.html
rpn_calculator/include/: rpn.h
rpn_calculator/src/: hello  main.cpp  rpn.cpp
rpn_calculator/tests/: CMakeLists.txt  test_rpn.cpp
